# maya-bridge

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindMaya.cmake
include/: shared_data.h  sync_max.h
src/: maya_bridge.cpp  sync_max.cpp
